Fixes   -  stake box horizontal scroll issue   - fixed height for boxes

--- a/src/app/pages/indie/components/cash-out/cash-out.component.scss
+++ b/src/app/pages/indie/components/cash-out/cash-out.component.scss
@@ -3,5 +3,9 @@
         height: 80px !important;
         font-size: 1.4rem !important;
     }
+
+    & nb-card {
+        height: 270px !important;
+    }
     
 }
