--- a/src/app/pages/indie/components/new-payment/new-payment.component.scss
+++ b/src/app/pages/indie/components/new-payment/new-payment.component.scss
@@ -142,4 +142,8 @@
             top: 3rem;
         }
     }
+
+    & nb-card {
+        min-height: 270px !important;
+    }
 }
