--- a/src/app/pages/indie/components/stake-to-vault/stake-to-vault.component.scss
+++ b/src/app/pages/indie/components/stake-to-vault/stake-to-vault.component.scss
@@ -4,4 +4,12 @@
         font-size: 1.4rem !important;
     }
     
+    & nb-card {
+        height: 270px !important;
+
+        & .bonus-entry {
+            width: 85%;
+            margin: 0 auto 0 auto !important;
+        }
+    }
 }
